--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .App{
   text-align: center;
 }
+.Users{
+  display: flex;
+  justify-content: space-evenly;
+  flex-flow: row wrap;
+}
+
+.name1, .name2, .name3{
+  flex: auto;
+}
